# kalman_arm_controller

./: CMakeLists.txt  arm.urdf  kalman_arm_controller.xml  package.xml
bringup/config/: arm.rviz  r6bot_controller.yaml  servo_config.yaml
bringup/launch/: arm_controller.launch.py  debug.launch.py  debug_arm.launch.py  joy.launch.py  master.launch.py  r6bot_controller.launch.py  send_trajectory.launch.py  servo.launch.py
controller/: arm_controller.cpp  r6bot_controller.cpp
controller/include/kalman_arm_controller/: arm_controller.hpp
controller/include/ros2_control_demo_example_7/: r6bot_controller.hpp
description/launch/: view_r6bot.launch.py
description/ros2_control/: r6bot.ros2_control.xacro
description/urdf/: arm.urdf.xacro  arm_description.urdf.xacro  dupsko.urdf  r6bot.urdf.xacro  robot_dum.urdf
doc/: userdoc.rst
hardware/: arm_config.cpp  arm_hardware.cpp  can_driver.cpp  can_handlers.cpp  can_vars.cpp  master_hardware.cpp  r6bot_hardware.cpp  r6bot_hardware.cpp.old
hardware/can_src/: arm_config.cpp  arm_handlers.cpp  can_driver.cpp  can_handlers.cpp  can_vars.cpp  master_handlers.cpp
hardware/include/kalman_arm_controller/: arm_hardware.hpp  can_driver.hpp  can_handlers.hpp  can_messages.hpp  can_types.hpp  can_vars.hpp
hardware/include/kalman_arm_controller/can_lib/: arm_config.hpp  arm_handlers.hpp  arm_messages.hpp  can_driver.hpp  can_messages.hpp  can_types.hpp  can_vars.hpp  master_handlers.hpp  master_messages.hpp
hardware/include/kalman_arm_controller/can_libs/: can_driver.hpp  can_messages.hpp
hardware/include/ros2_control_demo_example_7/: r6bot_hardware.hpp
hardware/src/: can_driver.cpp
reference_generator/: joystick_servo_example.cpp  send_trajectory.cpp
scripts/: extra_can_node.cpp  master_hardware.cpp  servo_publisher.cpp
test/: can_read_test.cpp  can_write_test.cpp  test_urdf_xacro.py  test_view_robot_launch.py
unittests/: can_read_test.cpp  can_write_test.cpp
